--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mkdirp": "^0.5.1",
     "moment": "^2.10.3",
     "path": "^0.11.14",
+    "prettyjson": "^1.1.2",
     "recursive-readdir": "^1.2.1",
     "request": "^2.57.0",
     "traverse": "^0.6.6",
